--- a/CorvallisRecycle/DataViewController.xib
+++ b/CorvallisRecycle/DataViewController.xib
@@ -7,7 +7,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DataViewController">
             <connections>
                 <outlet property="AddressField" destination="Zf4-Ru-Hyr" id="54Z-WS-Lp7"/>
-                <outlet property="AddressLabel" destination="LDf-MC-1E6" id="bCs-V7-1bJ"/>
+                <outlet property="AddressLabel" destination="DwI-ma-wBF" id="i4D-nC-fxE"/>
                 <outlet property="MapButton" destination="EQg-MA-PUQ" id="iaX-1x-aVf"/>
                 <outlet property="NameData" destination="kNV-XJ-1uv" id="79J-by-vi1"/>
                 <outlet property="NameLabel" destination="Gvd-A3-8hj" id="W69-PH-y7G"/>
@@ -15,6 +15,7 @@
                 <outlet property="PhoneLabel" destination="nrn-kL-Jqo" id="lm0-ft-G4m"/>
                 <outlet property="WSData" destination="uVV-zZ-KnW" id="Iyt-aN-3ud"/>
                 <outlet property="WebSiteLabel" destination="Hub-zq-3TR" id="uOb-gD-o31"/>
+                <outlet property="noteLabel" destination="DwI-ma-wBF" id="NsH-vc-gCy"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -65,9 +66,15 @@
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="16-16-bae1463b4228b5053cf1c9a7986ed827.png" translatesAutoresizingMaskIntoConstraints="NO" id="FHa-KP-aLf">
-                    <rect key="frame" x="243" y="256" width="23" height="21"/>
-                </imageView>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DW7-Uj-FCw">
+                    <rect key="frame" x="78" y="247" width="139" height="34"/>
+                    <state key="normal">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="callPhone:" destination="-1" eventType="touchUpInside" id="qyI-9d-9pD"/>
+                    </connections>
+                </button>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Zf4-Ru-Hyr">
                     <rect key="frame" x="78" y="153" width="208" height="78"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -94,15 +101,15 @@
                         <action selector="addressButton:" destination="-1" eventType="touchUpInside" id="GoH-mM-VP6"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DW7-Uj-FCw">
-                    <rect key="frame" x="78" y="247" width="204" height="39"/>
-                    <state key="normal">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <connections>
-                        <action selector="callPhone:" destination="-1" eventType="touchUpInside" id="qyI-9d-9pD"/>
-                    </connections>
-                </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="(takes you to Apple Maps)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DwI-ma-wBF">
+                    <rect key="frame" x="109" y="452" width="146" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="16-16-bae1463b4228b5053cf1c9a7986ed827.png" translatesAutoresizingMaskIntoConstraints="NO" id="FHa-KP-aLf">
+                    <rect key="frame" x="199" y="256" width="23" height="21"/>
+                </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
         </view>
